--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 
 <body>
-    <h1>The Psychic Game</h1>
-    <p>Guess what letter I'm thinking of</p>
+    <div>
+        <h1>Hangman</h1>
+        <img src="assets/images/80img.jpg">
+    </div>
+    <div id="mainRow" >
+        
+    </div>
     <!--An empty div to hold the results as being updated-->
     <div id="emptyDiv"></div>
     <script src="assets/javascript/game.js"></script>
